menu and hero section html struture

--- a/index.html
+++ b/index.html
@@ -1,13 +1,97 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="/dist/output.css" rel="stylesheet">
-</head>
-<body>
-  <h1 class="text-3xl font-bold">
-    Hello world!
-  </h1>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="/dist/output.css" rel="stylesheet" />
+    <title>Reno Expert</title>
+  </head>
+
+  <body>
+    <!-- menu bar start  -->
+
+    <div class="w-[1920px] h-[103px] relative">
+      <div
+        class="w-[1920px] h-[103px] px-[39px] py-[23px] left-0 top-0 absolute bg-stone-200 justify-start items-center gap-[1326px] inline-flex"
+      >
+        <img
+          class="w-[207.39px] h-10"
+          src="./asset/img/reno_logo.png"
+        />
+        <div
+          class="px-[47px] py-[18px] bg-orange-400 rounded-[161px] justify-start items-center gap-5 flex"
+        >
+          <div
+            class="text-stone-200 text-sm font-medium font-['Transducer Test'] leading-tight tracking-tight"
+          >
+            Make a free quote
+          </div>
+        </div>
+      </div>
+      <div class="w-[479px] h-7 left-[721px] top-[38px] absolute">
+        <div class="w-[92px] h-7 left-0 top-0 absolute">
+          <div
+            class="left-0 top-0 absolute text-stone-800 text-base font-normal font-['Transducer Test'] leading-7"
+          >
+            Services
+          </div>
+        </div>
+        <div
+          class="left-[144px] top-0 absolute text-stone-800 text-base font-normal font-['Transducer Test'] leading-7"
+        >
+          About
+        </div>
+        <div
+          class="left-[247px] top-0 absolute text-stone-800 text-base font-normal font-['Transducer Test'] leading-7"
+        >
+          Testimonials
+        </div>
+        <div
+          class="left-[407px] top-0 absolute text-stone-800 text-base font-normal font-['Transducer Test'] leading-7"
+        >
+          Projects
+        </div>
+      </div>
+    </div>
+
+    <!-- menu bar end  -->
+
+    <div
+      class="text-stone-800 text-[43.20px] font-normal font-['Transducer Test'] leading-[51.84px]"
+    >
+      Reliable Renovation<br />Service Provider.
+    </div>
+    <div
+      class="text-stone-800 text-lg font-normal font-['Transducer Test'] leading-7"
+    >
+      We are a renovation company that offers a wide range of <br />renovation
+      and interior design services. Our services are <br />commercial,
+      industrial and residential oriented.
+    </div>
+    <div class="w-[1920px] h-[702px] relative">
+      <div class="w-[1920px] h-[702px] left-0 top-0 absolute bg-zinc-300"></div>
+      <img
+        class="w-[1926px] h-[1037px] left-0 top-[703px] absolute opacity-25"
+        src="https://via.placeholder.com/1926x1037"
+      />
+    </div>
+    <div
+      class="w-[1920px] h-[702px] bg-gradient-to-l from-stone-200 to-stone-200"
+    ></div>
+    <div class="w-[1920px] h-[199px] bg-stone-200"></div>
+    <div class="w-[1920px] h-[0px] border border-stone-400"></div>
+    <img
+      class="w-[1197px] h-[702px]"
+      src="https://via.placeholder.com/1197x702"
+    />
+    <div
+      class="w-[307px] h-14 px-[47px] py-[18px] bg-orange-400 rounded-[161px] justify-start items-center gap-5 inline-flex"
+    >
+      <div
+        class="text-white text-sm font-medium font-['Transducer Test'] leading-tight tracking-tight"
+      >
+        Make a free quote
+      </div>
+    </div>
+  </body>
 </html>
