review section design done

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div class="wrapper">
       <!-- header start  -->
       <header
-        class="header_wrapper w-full box-border bg-[#EEECE8] px-6 border-b-2 border-[#BEB8AE]"
+        class="header_wrapper w-full box-border bg-[#EEECE8] px-6 border-b-[0.1rem] border-[#BEB8AE]"
       >
         <nav class="flex justify-between w-full h-20 items-center">
           <div class="logo">
@@ -29,7 +29,7 @@
           </div>
           <div class="">
             <ul class="flex gap-6">
-              <li class="cursor-pointer">
+              <li class="cursor-pointer service">
                 <a class="text-[#291E18] text-lg" href="#"
                   >Services
                   <svg
@@ -71,7 +71,7 @@
 
       <!-- here started the hero section  -->
       <section
-        class="hero bg-[#EEECE8] h-[calc(100vh-18.5rem)] min-h-[35rem] w-full flex"
+        class="hero bg-[#EEECE8] h-[calc(100vh-18.5rem)] min-h-[35rem] w-full flex border-b-[0.1rem] border-[#BEB8AE]"
       >
         <div class="h-full w-[43%] flex justify-end items-center">
           <div class="w-[37.6875rem] mr-6">
@@ -96,6 +96,202 @@
         </div>
       </section>
       <!-- here ended the hero section  -->
+
+      <!-- review section start -->
+
+      <section
+        class="h-[13.4rem] bg-[#EEECE8] p-10 flex items-center justify-center gap-20 border-b-[0.1rem] border-[#BEB8AE]"
+      >
+        <div class="flex gap-20">
+          <div class="flex items-center justify-center gap-5">
+            <img
+              class="w-[5.75rem] h-[5.75rem]"
+              src="./asset/img/review_img1.png"
+              alt="person img"
+            />
+            <div>
+              <h3
+                class="text-black text-[1.125rem] leading-5 tracking-[0.0175rem] capitalize"
+              >
+                Sarah Wyne
+              </h3>
+              <div class="flex gap-1 items-center justify-center">
+                <h4
+                  class="text-black text-[1.125rem] leading-5 tracking-[0.0175rem] capitalize"
+                >
+                  5.0
+                </h4>
+                <i class="fa-solid fa-star text-[#FF6D43]"></i>
+                <i class="fa-solid fa-star text-[#FF6D43]"></i>
+                <i class="fa-solid fa-star text-[#FF6D43]"></i>
+                <i class="fa-solid fa-star text-[#FF6D43]"></i>
+                <i class="fa-solid fa-star text-[#FF6D43]"></i>
+              </div>
+              <p
+                class="text-[#787878] text-xs not-italic font-normal leading-5 tracking-[0.0175rem] capitalize"
+              >
+                10 Feb, 2023
+              </p>
+            </div>
+          </div>
+          <div class="flex items-center justify-center gap-5">
+            <img
+              class="w-[5.75rem] h-[5.75rem]"
+              src="./asset/img/review_img3.png"
+              alt="person img"
+            />
+            <div>
+              <h3
+                class="text-black text-[1.125rem] leading-5 tracking-[0.0175rem] capitalize"
+              >
+                Sarah Wyne
+              </h3>
+              <div class="flex gap-1 items-center justify-center">
+                <h4
+                  class="text-black text-[1.125rem] leading-5 tracking-[0.0175rem] capitalize"
+                >
+                  5.0
+                </h4>
+                <i class="fa-solid fa-star text-[#FF6D43]"></i>
+                <i class="fa-solid fa-star text-[#FF6D43]"></i>
+                <i class="fa-solid fa-star text-[#FF6D43]"></i>
+                <i class="fa-solid fa-star text-[#FF6D43]"></i>
+                <i class="fa-solid fa-star text-[#FF6D43]"></i>
+              </div>
+              <p
+                class="text-[#787878] text-xs not-italic font-normal leading-5 tracking-[0.0175rem] capitalize"
+              >
+                10 Feb, 2023
+              </p>
+            </div>
+          </div>
+          <div class="flex items-center justify-center gap-5">
+            <img
+              class="w-[5.75rem] h-[5.75rem]"
+              src="./asset/img/review_img2.png"
+              alt="person img"
+            />
+            <div>
+              <h3
+                class="text-black text-[1.125rem] leading-5 tracking-[0.0175rem] capitalize"
+              >
+                Sarah Wyne
+              </h3>
+              <div class="flex gap-1 items-center justify-center">
+                <h4
+                  class="text-black text-[1.125rem] leading-5 tracking-[0.0175rem] capitalize"
+                >
+                  5.0
+                </h4>
+                <i class="fa-solid fa-star text-[#FF6D43]"></i>
+                <i class="fa-solid fa-star text-[#FF6D43]"></i>
+                <i class="fa-solid fa-star text-[#FF6D43]"></i>
+                <i class="fa-solid fa-star text-[#FF6D43]"></i>
+                <i class="fa-solid fa-star text-[#FF6D43]"></i>
+              </div>
+              <p
+                class="text-[#787878] text-xs not-italic font-normal leading-5 tracking-[0.0175rem] capitalize"
+              >
+                10 Feb, 2023
+              </p>
+            </div>
+          </div>
+          <div class="flex items-center justify-center gap-5">
+            <img
+              class="w-[5.75rem] h-[5.75rem]"
+              src="./asset/img/review_img3.png"
+              alt="person img"
+            />
+            <div>
+              <h3
+                class="text-black text-[1.125rem] leading-5 tracking-[0.0175rem] capitalize"
+              >
+                Sarah Wyne
+              </h3>
+              <div class="flex gap-1 items-center justify-center">
+                <h4
+                  class="text-black text-[1.125rem] leading-5 tracking-[0.0175rem] capitalize"
+                >
+                  5.0
+                </h4>
+                <i class="fa-solid fa-star text-[#FF6D43]"></i>
+                <i class="fa-solid fa-star text-[#FF6D43]"></i>
+                <i class="fa-solid fa-star text-[#FF6D43]"></i>
+                <i class="fa-solid fa-star text-[#FF6D43]"></i>
+                <i class="fa-solid fa-star text-[#FF6D43]"></i>
+              </div>
+              <p
+                class="text-[#787878] text-xs not-italic font-normal leading-5 tracking-[0.0175rem] capitalize"
+              >
+                10 Feb, 2023
+              </p>
+            </div>
+          </div>
+          <div class="flex items-center justify-center gap-5">
+            <img
+              class="w-[5.75rem] h-[5.75rem]"
+              src="./asset/img/review_img4.png"
+              alt="person img"
+            />
+            <div>
+              <h3
+                class="text-black text-[1.125rem] leading-5 tracking-[0.0175rem] capitalize"
+              >
+                Sarah Wyne
+              </h3>
+              <div class="flex gap-1 items-center justify-center">
+                <h4
+                  class="text-black text-[1.125rem] leading-5 tracking-[0.0175rem] capitalize"
+                >
+                  5.0
+                </h4>
+                <i class="fa-solid fa-star text-[#FF6D43]"></i>
+                <i class="fa-solid fa-star text-[#FF6D43]"></i>
+                <i class="fa-solid fa-star text-[#FF6D43]"></i>
+                <i class="fa-solid fa-star text-[#FF6D43]"></i>
+                <i class="fa-solid fa-star text-[#FF6D43]"></i>
+              </div>
+              <p
+                class="text-[#787878] text-xs not-italic font-normal leading-5 tracking-[0.0175rem] capitalize"
+              >
+                10 Feb, 2023
+              </p>
+            </div>
+          </div>
+          <div class="flex items-center justify-center gap-5">
+            <img
+              class="w-[5.75rem] h-[5.75rem]"
+              src="./asset/img/review_img5.png"
+              alt="person img"
+            />
+            <div>
+              <h3
+                class="text-black text-[1.125rem] leading-5 tracking-[0.0175rem] capitalize"
+              >
+                Sarah Wyne
+              </h3>
+              <div class="flex gap-1 items-center justify-center">
+                <h4
+                  class="text-black text-[1.125rem] leading-5 tracking-[0.0175rem] capitalize"
+                >
+                  5.0
+                </h4>
+                <i class="fa-solid fa-star text-[#FF6D43]"></i>
+                <i class="fa-solid fa-star text-[#FF6D43]"></i>
+                <i class="fa-solid fa-star text-[#FF6D43]"></i>
+                <i class="fa-solid fa-star text-[#FF6D43]"></i>
+                <i class="fa-solid fa-star text-[#FF6D43]"></i>
+              </div>
+              <p
+                class="text-[#787878] text-xs not-italic font-normal leading-5 tracking-[0.0175rem] capitalize"
+              >
+                10 Feb, 2023
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- review section end -->
     </div>
   </body>
 </html>
