services structure add

--- a/index.html
+++ b/index.html
@@ -98,11 +98,11 @@
       <!-- here ended the hero section  -->
 
       <!-- review section start -->
-
       <section
         class="h-[13.4rem] bg-[#EEECE8] p-10 flex items-center justify-center gap-20 border-b-[0.1rem] border-[#BEB8AE]"
       >
-        <div class="flex gap-20">
+        <div class="flex gap-24">
+          <!-- layout 1 -->
           <div class="flex items-center justify-center gap-5">
             <img
               class="w-[5.75rem] h-[5.75rem]"
@@ -134,37 +134,8 @@
               </p>
             </div>
           </div>
-          <div class="flex items-center justify-center gap-5">
-            <img
-              class="w-[5.75rem] h-[5.75rem]"
-              src="./asset/img/review_img3.png"
-              alt="person img"
-            />
-            <div>
-              <h3
-                class="text-black text-[1.125rem] leading-5 tracking-[0.0175rem] capitalize"
-              >
-                Sarah Wyne
-              </h3>
-              <div class="flex gap-1 items-center justify-center">
-                <h4
-                  class="text-black text-[1.125rem] leading-5 tracking-[0.0175rem] capitalize"
-                >
-                  5.0
-                </h4>
-                <i class="fa-solid fa-star text-[#FF6D43]"></i>
-                <i class="fa-solid fa-star text-[#FF6D43]"></i>
-                <i class="fa-solid fa-star text-[#FF6D43]"></i>
-                <i class="fa-solid fa-star text-[#FF6D43]"></i>
-                <i class="fa-solid fa-star text-[#FF6D43]"></i>
-              </div>
-              <p
-                class="text-[#787878] text-xs not-italic font-normal leading-5 tracking-[0.0175rem] capitalize"
-              >
-                10 Feb, 2023
-              </p>
-            </div>
-          </div>
+
+          <!-- layout 2 -->
           <div class="flex items-center justify-center gap-5">
             <img
               class="w-[5.75rem] h-[5.75rem]"
@@ -196,6 +167,8 @@
               </p>
             </div>
           </div>
+
+          <!-- layout 3 -->
           <div class="flex items-center justify-center gap-5">
             <img
               class="w-[5.75rem] h-[5.75rem]"
@@ -227,6 +200,8 @@
               </p>
             </div>
           </div>
+
+          <!-- layout 4 -->
           <div class="flex items-center justify-center gap-5">
             <img
               class="w-[5.75rem] h-[5.75rem]"
@@ -258,6 +233,8 @@
               </p>
             </div>
           </div>
+
+          <!-- layout 5 -->
           <div class="flex items-center justify-center gap-5">
             <img
               class="w-[5.75rem] h-[5.75rem]"
@@ -292,6 +269,57 @@
         </div>
       </section>
       <!-- review section end -->
+
+      <!-- service section start  -->
+      <section
+        class="hero bg-[#EEECE8] min-h-[35rem] w-full border-b-[0.1rem] border-[#BEB8AE]"
+      >
+        <div class="pt-[7.13rem] pl-[15.5rem] pb-[9rem]">
+          <div class="flex gap-9 items-center mb-[7.12rem] pl-[0.5rem]">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="8"
+              height="8"
+              viewBox="0 0 8 8"
+              fill="none"
+            >
+              <circle cx="4" cy="4" r="4" fill="#FF6D43" />
+            </svg>
+            <h1
+              class="text-[#291E18] text-center not-italic text-[2.6875rem] font-normal leading-10"
+            >
+              Our Services
+            </h1>
+          </div>
+          <div class="bg-white w-[50rem] h-auto flex overflow-hidden">
+            <div class="w-[35rem]">
+              <div
+                class="flex flex-col justify-center mt-[5.5rem] ml-[4.38rem]"
+              >
+                <h1
+                  class="text-gray-900 not-italic text-[2.6875rem] font-normal leading-[3.24rem] pb-[1.06rem]"
+                >
+                  Painting
+                </h1>
+                <p
+                  class="text-gray-900 text-base not-italic font-normal opacity-[0.7] pb-[7.03rem]"
+                >
+                  From helping you choose the perfect color palette to executing
+                  precise brushwork, we bring life and vibrancy to your home's
+                  walls, creating an atmosphere that reflects your unique style.
+                </p>
+                <a
+                  class="bg-[#FF6D43] py-4 px-5 text-[#EEECE8] rounded-full cursor-pointer mb-[5.82rem]"
+                  >Learn More
+                  <i class="fa-solid fa-arrow-right-long ml-5"></i>
+                </a>
+              </div>
+            </div>
+            <div class="paintingBg ml-40 -mr-52 w-[38.25rem]"></div>
+          </div>
+        </div>
+      </section>
+      <!-- service section end -->
     </div>
   </body>
 </html>
