--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
           <div class="">
             <a
               class="bg-[#FF6D43] py-4 px-10 text-[#EEECE8] rounded-full cursor-pointer"
-              >Make a free quote
+              >Get a free quote
               <i class="fa-solid fa-arrow-right-long ml-3"></i>
             </a>
           </div>
@@ -271,9 +271,7 @@
       <!-- review section end -->
 
       <!-- service section start  -->
-      <section
-        class="hero bg-[#EEECE8] min-h-[35rem] w-full border-b-[0.1rem] border-[#BEB8AE]"
-      >
+      <section class="service bg-[#EEECE8] min-h-[35rem] w-full">
         <div class="pt-[7.13rem] pl-[15.5rem] pb-[9rem]">
           <div class="flex gap-9 items-center mb-[7.12rem] pl-[0.5rem]">
             <svg
@@ -291,35 +289,323 @@
               Our Services
             </h1>
           </div>
-          <div class="bg-white w-[50rem] h-auto flex overflow-hidden">
-            <div class="w-[35rem]">
-              <div
-                class="flex flex-col justify-center mt-[5.5rem] ml-[4.38rem]"
-              >
-                <h1
-                  class="text-gray-900 not-italic text-[2.6875rem] font-normal leading-[3.24rem] pb-[1.06rem]"
-                >
-                  Painting
-                </h1>
-                <p
-                  class="text-gray-900 text-base not-italic font-normal opacity-[0.7] pb-[7.03rem]"
-                >
-                  From helping you choose the perfect color palette to executing
-                  precise brushwork, we bring life and vibrancy to your home's
-                  walls, creating an atmosphere that reflects your unique style.
-                </p>
-                <a
-                  class="bg-[#FF6D43] py-4 px-5 text-[#EEECE8] rounded-full cursor-pointer mb-[5.82rem]"
-                  >Learn More
-                  <i class="fa-solid fa-arrow-right-long ml-5"></i>
-                </a>
+
+          <div class="grid sm:grid-cols-1 md:grid-cols-2">
+            <!-- here started the single service section  -->
+            <div class="w-[50rem] h-[28rem] relative">
+              <div class="w-3/4 h-full bg-white absolute">
+                <div class="flex mt-[5.5rem] justify-center">
+                  <div class="w-4/5">
+                    <h1
+                      class="text-gray-900 not-italic text-[2.6875rem] font-normal leading-[3.24rem] pb-[1.06rem]"
+                    >
+                      Painting
+                    </h1>
+                    <p
+                      class="text-gray-900 text-base not-italic font-normal opacity-[0.7] pb-[7.03rem]"
+                    >
+                      From helping you choose the perfect color palette to
+                      executing precise brushwork, we bring life and vibrancy to
+                      your home's walls, creating an atmosphere that reflects
+                      your unique style.
+                    </p>
+                    <a
+                      class="bg-[#FF6D43] py-4 px-5 text-[#EEECE8] rounded-full cursor-pointer mb-[5.82rem]"
+                      >Learn More
+                      <i
+                        class="fa-solid fa-arrow-right-long ml-5 position-absolute right-0 top-0"
+                      ></i>
+                    </a>
+                  </div>
+                </div>
+              </div>
+              <div class="w-1/4 h-full absolute right-0">
+                <img
+                  src="asset/img/service_paint.png"
+                  class="h-full"
+                  alt=""
+                  srcset=""
+                />
               </div>
             </div>
-            <div class="paintingBg ml-40 -mr-52 w-[38.25rem]"></div>
+            <!-- single service section ended -->
+
+            <!-- here started the single service section  -->
+            <div class="w-[50rem] h-[28rem] relative">
+              <div class="w-3/4 h-full bg-white absolute">
+                <div class="flex mt-[5.5rem] justify-center">
+                  <div class="w-4/5">
+                    <h1
+                      class="text-gray-900 not-italic text-[2.6875rem] font-normal leading-[3.24rem] pb-[1.06rem]"
+                    >
+                      Demolition
+                    </h1>
+                    <p
+                      class="text-gray-900 text-base not-italic font-normal opacity-[0.7] pb-[7.03rem]"
+                    >
+                      Our demolition services clear the path for your vision,
+                      ensuring a meticulous process that paves the way for the
+                      transformation of your space.
+                    </p>
+                    <a
+                      class="bg-[#FF6D43] py-4 px-5 text-[#EEECE8] rounded-full cursor-pointer mb-[5.82rem]"
+                      >Learn More
+                      <i
+                        class="fa-solid fa-arrow-right-long ml-5 position-absolute right-0 top-0"
+                      ></i>
+                    </a>
+                  </div>
+                </div>
+              </div>
+              <div class="w-1/4 h-full absolute right-0">
+                <img
+                  src="asset/img/service_demolition.png"
+                  class="h-full"
+                  alt=""
+                  srcset=""
+                />
+              </div>
+            </div>
+            <!-- single service section ended -->
+
+            <!-- here started the single service section  -->
+            <div class="w-[50rem] h-[28rem] relative">
+              <div class="w-3/4 h-full bg-white absolute">
+                <div class="flex mt-[5.5rem] justify-center">
+                  <div class="w-4/5">
+                    <h1
+                      class="text-gray-900 not-italic text-[2.6875rem] font-normal leading-[3.24rem] pb-[1.06rem]"
+                    >
+                      Masonry
+                    </h1>
+                    <p
+                      class="text-gray-900 text-base not-italic font-normal opacity-[0.7] pb-[7.03rem]"
+                    >
+                      Our skilled artisans combine expertise with creativity,
+                      bringing solid foundations and artful creations to your
+                      home.
+                    </p>
+                    <a
+                      class="bg-[#FF6D43] py-4 px-5 text-[#EEECE8] rounded-full cursor-pointer mb-[5.82rem]"
+                      >Learn More
+                      <i
+                        class="fa-solid fa-arrow-right-long ml-5 position-absolute right-0 top-0"
+                      ></i>
+                    </a>
+                  </div>
+                </div>
+              </div>
+              <div class="w-1/4 h-full absolute right-0">
+                <img
+                  src="asset/img/service_masonry.png"
+                  class="h-full"
+                  alt=""
+                  srcset=""
+                />
+              </div>
+            </div>
+            <!-- single service section ended -->
+
+            <!-- here started the single service section  -->
+            <div class="w-[50rem] h-[28rem] relative">
+              <div class="w-3/4 h-full bg-white absolute">
+                <div class="flex mt-[5.5rem] justify-center">
+                  <div class="w-4/5">
+                    <h1
+                      class="text-gray-900 not-italic text-[2.6875rem] font-normal leading-[3.24rem] pb-[1.06rem]"
+                    >
+                      Flooring
+                    </h1>
+                    <p
+                      class="text-gray-900 text-base not-italic font-normal opacity-[0.7] pb-[7.03rem]"
+                    >
+                      our experts guide you through a range of materials and
+                      styles, ensuring a floor that not only meets your needs
+                      but exceeds your expectations.
+                    </p>
+                    <a
+                      class="bg-[#FF6D43] py-4 px-5 text-[#EEECE8] rounded-full cursor-pointer mb-[5.82rem]"
+                      >Learn More
+                      <i
+                        class="fa-solid fa-arrow-right-long ml-5 position-absolute right-0 top-0"
+                      ></i>
+                    </a>
+                  </div>
+                </div>
+              </div>
+              <div class="w-1/4 h-full absolute right-0">
+                <img
+                  src="asset/img/service_flooring.png"
+                  class="h-full"
+                  alt=""
+                  srcset=""
+                />
+              </div>
+            </div>
+            <!-- single service section ended -->
+
+            <!-- here started the single service section  -->
+            <div class="w-[50rem] h-[28rem] relative">
+              <div class="w-3/4 h-full bg-white absolute">
+                <div class="flex mt-[5.5rem] justify-center">
+                  <div class="w-4/5">
+                    <h1
+                      class="text-gray-900 not-italic text-[2.6875rem] font-normal leading-[3.24rem] pb-[1.06rem]"
+                    >
+                      Wall Partition & Ceiling
+                    </h1>
+                    <p
+                      class="text-gray-900 text-base not-italic font-normal opacity-[0.7] pb-[7.03rem]"
+                    >
+                      We create functional and aesthetic spaces, crafting walls
+                      and ceilings that enhance the overall beauty and
+                      functionality of your home.
+                    </p>
+                    <a
+                      class="bg-[#FF6D43] py-4 px-5 text-[#EEECE8] rounded-full cursor-pointer mb-[5.82rem]"
+                      >Learn More
+                      <i
+                        class="fa-solid fa-arrow-right-long ml-5 position-absolute right-0 top-0"
+                      ></i>
+                    </a>
+                  </div>
+                </div>
+              </div>
+              <div class="w-1/4 h-full absolute right-0">
+                <img
+                  src="asset/img/service_wall_partition.png"
+                  class="h-full"
+                  alt=""
+                  srcset=""
+                />
+              </div>
+            </div>
+            <!-- single service section ended -->
+
+            <!-- here started the single service section  -->
+            <div class="w-[50rem] h-[28rem] relative">
+              <div class="w-3/4 h-full bg-white absolute">
+                <div class="flex mt-[5.5rem] justify-center">
+                  <div class="w-4/5">
+                    <h1
+                      class="text-gray-900 not-italic text-[2.6875rem] font-normal leading-[3.24rem] pb-[1.06rem]"
+                    >
+                      Electrical and Plumbing
+                    </h1>
+                    <p
+                      class="text-gray-900 text-base not-italic font-normal opacity-[0.7] pb-[7.03rem]"
+                    >
+                      Our experts handle the technical aspects with precision,
+                      delivering power and flow that align with the design and
+                      functionality of your home.
+                    </p>
+                    <a
+                      class="bg-[#FF6D43] py-4 px-5 text-[#EEECE8] rounded-full cursor-pointer mb-[5.82rem]"
+                      >Learn More
+                      <i
+                        class="fa-solid fa-arrow-right-long ml-5 position-absolute right-0 top-0"
+                      ></i>
+                    </a>
+                  </div>
+                </div>
+              </div>
+              <div class="w-1/4 h-full absolute right-0">
+                <img
+                  src="asset/img/service_electrical.png"
+                  class="h-full"
+                  alt=""
+                  srcset=""
+                />
+              </div>
+            </div>
+            <!-- single service section ended -->
           </div>
         </div>
       </section>
       <!-- service section end -->
+
+      <!-- reno work section start  -->
+      <section class="renoWork bg-[#EEECE8] min-h-[35rem] w-full">
+        <div class="pb-52">
+          <div class="mb-20">
+            <h1
+              class="text-gray-900 text-center not-italic font-normal leading-10 text-[2.75rem] mb-7"
+            >
+              See how we work
+            </h1>
+            <p
+              class="text-gray-900 text-center text-base not-italic font-normal leading-6 w-[53rem] m-auto opacity-70 px-20"
+            >
+              Our seasoned team of professionals brings years of expertise to
+              every project. From conceptualization to execution.
+            </p>
+          </div>
+          <!-- video section start  -->
+          <div class="videoReno w-[76.0625rem] h-[35.4375rem] m-auto">
+            <div class="videoWapper">
+              <div class="video-timeline">
+                <div class="progress-area">
+                  <span>00:00</span>
+                  <div class="progress-bar"></div>
+                </div>
+              </div>
+              <ul class="video-controls">
+                <li class="options left">
+                  <button class="volume">
+                    <i class="fa-solid fa-volume-high"></i>
+                  </button>
+                  <input type="range" min="0" max="1" step="any" />
+                  <div class="video-timer">
+                    <p class="current-time">00:00</p>
+                    <p class="separator">/</p>
+                    <p class="video-duration">00:00</p>
+                  </div>
+                </li>
+                <li class="options center">
+                  <button class="skip-backward">
+                    <i class="fas fa-backward"></i>
+                  </button>
+                  <button class="play-pause">
+                    <i class="fas fa-play"></i>
+                  </button>
+                  <button class="skip-forward">
+                    <i class="fas fa-forward"></i>
+                  </button>
+                </li>
+                <li class="options right">
+                  <div class="playback-content">
+                    <button class="playback-speed">
+                      <span class="material-symbols-rounded"
+                        >slow_motion_video</span
+                      >
+                    </button>
+                    <ul class="speed-options">
+                      <li data-speed="2">2x</li>
+                      <li data-speed="1.5">1.5x</li>
+                      <li data-speed="1" class="active">Normal</li>
+                      <li data-speed="0.75">0.75x</li>
+                      <li data-speed="0.5">0.5x</li>
+                    </ul>
+                  </div>
+                  <button class="pic-in-pic">
+                    <span class="material-icons">picture_in_picture_alt</span>
+                  </button>
+                  <button class="fullscreen">
+                    <i class="fa-solid fa-expand"></i>
+                  </button>
+                </li>
+              </ul>
+            </div>
+            <video src="./asset/video/Construction_promo_video.mp4"></video>
+          </div>
+          <!-- video section end  -->
+        </div>
+      </section>
+      <!-- reno work section end  -->
     </div>
+
+    <!-- javascript file link  -->
+
+    <script src="./asset/js/script.js"></script>
   </body>
 </html>
