--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             </p>
             <a
               class="bg-[#FF6D43] py-4 px-10 inline-block text-[#EEECE8] rounded-full cursor-pointer"
-              >Make a free quote
+              >Get a free quote
               <i class="fa-solid fa-arrow-right-long ml-3"></i>
             </a>
           </div>
@@ -407,7 +407,7 @@
             <!-- single service section ended -->
 
             <!-- here started the single service section  -->
-            <div class="w-[50rem] h-[28rem] relative">
+            <!-- <div class="w-[50rem] h-[28rem] relative">
               <div class="w-3/4 h-full bg-white absolute">
                 <div class="flex mt-[5.5rem] justify-center">
                   <div class="w-4/5">
@@ -441,11 +441,11 @@
                   srcset=""
                 />
               </div>
-            </div>
+            </div> -->
             <!-- single service section ended -->
 
             <!-- here started the single service section  -->
-            <div class="w-[50rem] h-[28rem] relative">
+            <!-- <div class="w-[50rem] h-[28rem] relative">
               <div class="w-3/4 h-full bg-white absolute">
                 <div class="flex mt-[5.5rem] justify-center">
                   <div class="w-4/5">
@@ -479,11 +479,11 @@
                   srcset=""
                 />
               </div>
-            </div>
+            </div> -->
             <!-- single service section ended -->
 
             <!-- here started the single service section  -->
-            <div class="w-[50rem] h-[28rem] relative">
+            <!-- <div class="w-[50rem] h-[28rem] relative">
               <div class="w-3/4 h-full bg-white absolute">
                 <div class="flex mt-[5.5rem] justify-center">
                   <div class="w-4/5">
@@ -517,7 +517,7 @@
                   srcset=""
                 />
               </div>
-            </div>
+            </div> -->
             <!-- single service section ended -->
           </div>
         </div>
@@ -541,67 +541,104 @@
             </p>
           </div>
           <!-- video section start  -->
-          <div class="videoReno w-[76.0625rem] h-[35.4375rem] m-auto">
-            <div class="videoWapper">
-              <div class="video-timeline">
-                <div class="progress-area">
-                  <span>00:00</span>
-                  <div class="progress-bar"></div>
-                </div>
-              </div>
-              <ul class="video-controls">
-                <li class="options left">
-                  <button class="volume">
-                    <i class="fa-solid fa-volume-high"></i>
-                  </button>
-                  <input type="range" min="0" max="1" step="any" />
-                  <div class="video-timer">
-                    <p class="current-time">00:00</p>
-                    <p class="separator">/</p>
-                    <p class="video-duration">00:00</p>
-                  </div>
-                </li>
-                <li class="options center">
-                  <button class="skip-backward">
-                    <i class="fas fa-backward"></i>
-                  </button>
-                  <button class="play-pause">
-                    <i class="fas fa-play"></i>
-                  </button>
-                  <button class="skip-forward">
-                    <i class="fas fa-forward"></i>
-                  </button>
-                </li>
-                <li class="options right">
-                  <div class="playback-content">
-                    <button class="playback-speed">
-                      <span class="material-symbols-rounded"
-                        >slow_motion_video</span
-                      >
-                    </button>
-                    <ul class="speed-options">
-                      <li data-speed="2">2x</li>
-                      <li data-speed="1.5">1.5x</li>
-                      <li data-speed="1" class="active">Normal</li>
-                      <li data-speed="0.75">0.75x</li>
-                      <li data-speed="0.5">0.5x</li>
-                    </ul>
-                  </div>
-                  <button class="pic-in-pic">
-                    <span class="material-icons">picture_in_picture_alt</span>
-                  </button>
-                  <button class="fullscreen">
-                    <i class="fa-solid fa-expand"></i>
-                  </button>
-                </li>
-              </ul>
+          <div class="videoReno w-[76.0625rem] h-[35.4375rem] m-auto bg-black">
+            <img id="logo2" src="./asset/img/reno_logo_2.png" alt="logo" />
+            <div class="play">
+              <svg
+                id="ellipsImg"
+                xmlns="http://www.w3.org/2000/svg"
+                width="94"
+                height="93"
+                viewBox="0 0 94 93"
+                fill="none"
+              >
+                <g filter="url(#filter0_b_315_142)">
+                  <circle cx="47" cy="46.5" r="46.5" fill="white" />
+                </g>
+                <defs>
+                  <filter
+                    id="filter0_b_315_142"
+                    x="-5.5"
+                    y="-6"
+                    width="105"
+                    height="105"
+                    filterUnits="userSpaceOnUse"
+                    color-interpolation-filters="sRGB"
+                  >
+                    <feFlood flood-opacity="0" result="BackgroundImageFix" />
+                    <feGaussianBlur in="BackgroundImageFix" stdDeviation="3" />
+                    <feComposite
+                      in2="SourceAlpha"
+                      operator="in"
+                      result="effect1_backgroundBlur_315_142"
+                    />
+                    <feBlend
+                      mode="normal"
+                      in="SourceGraphic"
+                      in2="effect1_backgroundBlur_315_142"
+                      result="shape"
+                    />
+                  </filter>
+                </defs>
+              </svg>
+              <svg
+                id="pollyImg"
+                xmlns="http://www.w3.org/2000/svg"
+                width="16"
+                height="18"
+                viewBox="0 0 16 18"
+                fill="none"
+              >
+                <path
+                  d="M15.5 9L0.499999 17.6603L0.5 0.339745L15.5 9Z"
+                  fill="#FF6D43"
+                />
+              </svg>
             </div>
-            <video src="./asset/video/Construction_promo_video.mp4"></video>
+
+            <video
+              poster="#000"
+              src="./asset/video/Construction_promo_video.mp4"
+            ></video>
           </div>
           <!-- video section end  -->
         </div>
       </section>
       <!-- reno work section end  -->
+
+      <!-- free quote section start here  -->
+      <section class="grid md:grid-cols-2 mb-20">
+        <div class="flex justify-center items-center">
+          <div class="bg-[#fff] w-3/4 flex flex-col gap-20">
+            <h1
+              class="text-gray-900 text-5xl not-italic font-normal leading-10"
+            >
+              Request Your Free Reno Quote!
+            </h1>
+            <p class="text-gray-900 text-lg not-italic font-normal leading-7">
+              Take the first step towards transforming your space by requesting
+              a free, no-obligation renovation quote. Simply fill out the form
+              below, and let's start the conversation.
+            </p>
+            <div class="flex gap-2">
+              <a
+                class="bg-[#FF6D43] py-4 px-10 inline-block text-[#EEECE8] rounded-full cursor-pointer"
+                >Get a free quote
+                <i class="fa-solid fa-arrow-right-long ml-3"></i>
+              </a>
+              <a
+                class="py-4 px-10 inline-block tracking-wide rounded-full cursor-pointer text-gray-900 text-sm not-italic font-normal leading-5 border-[0.03rem] border-[#BEB8AE]"
+                >Contact Us
+                <i class="fa-solid fa-arrow-right-long ml-3"></i>
+              </a>
+            </div>
+          </div>
+        </div>
+        <div class="bg-[#C6E4EE] flex justify-center items-center pt-10">
+          <img src="./asset/img/MDL 1.png" alt="man image" />
+        </div>
+      </section>
+      <!-- free quote section end here  -->
     </div>
 
     <!-- javascript file link  -->
