--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                 </p>
                 <a
                   class="bg-[#FF6D43] py-4 px-10 inline-block text-[#EEECE8] rounded-full cursor-pointer z-10"
-                  >Get a free quote
+                  >Make a free quote
                   <i class="fa-solid fa-arrow-right-long ml-3"></i>
                 </a>
               </div>
@@ -593,7 +593,7 @@
             </h1>
           </div>
           <p
-            class="text-[#291E18] text-base not-italic font-normal leading-6 mb-[12rem]"
+            class="text-[#291E18] text-base not-italic font-normal leading-6 mb-[12rem] w-[33rem]"
           >
             Discover the stories of satisfaction and joy from our valued
             clients. Their experiences with Renoexpert go beyond renovations.
@@ -636,9 +636,63 @@
             </svg>
           </div>
         </div>
-        <div class="rightSide"></div>
+        <div class="rightSide">
+          <div
+            class="w-[47.5rem] h-[31rem] bg-white p-20 flex flex-col gap-24"
+            id="bg_right"
+          >
+            <img id="coma" src="./asset/img/appostopic_coma.png" alt="coma" />
+            <div class="flex flex-col gap-8">
+              <div class="star_icon flex gap-2">
+                <i class="fa-solid fa-star text-[#FF6D43]"></i>
+                <i class="fa-solid fa-star text-[#FF6D43]"></i>
+                <i class="fa-solid fa-star text-[#FF6D43]"></i>
+                <i class="fa-solid fa-star text-[#FF6D43]"></i>
+                <i class="fa-solid fa-star text-[#FF6D43]"></i>
+              </div>
+              <p
+                class="text-xl font-normal leading-7 tracking-normal text-left text-[#291E18]"
+              >
+                Thank you Araf and team for completing painting of my kids
+                bedroom including feature walls and master bedroom within 2
+                days. They were super efficient and responsive. Pure dedication
+                and quick response to confirm paint and design works. They were
+                willing to do.....<span class="text-[#FF6D43] cursor-pointer"
+                  >read more</span
+                >
+              </p>
+            </div>
+            <div class="">
+              <img class="" src="./asset/img/reviewer_img.png" alt="person" />
+              <p class="text-[#291E18] mt-4">Avelina Ho 7 January 2023</p>
+            </div>
+          </div>
+        </div>
       </section>
       <!-- testimonial section end here  -->
+
+      <!-- renovate your home start  -->
+      <section class="bg-black p-6 h-[35rem] flex justify-center items-center">
+        <div class="flex flex-col gap-3 justify-center items-center m-4">
+          <h1
+            class="text-white text-6xl font-normal tracking-normal text-left leading-[77px]"
+          >
+            Ready to renovate your home?
+          </h1>
+          <p
+            class="text-white text-lg font-normal leading-5 tracking-normal text-center"
+          >
+            Drop us a line to discuss how Renoexpert can help you to organize
+            your dream Home.
+          </p>
+          <a
+            class="bg-[#FF6D43] py-4 px-10 inline-block text-[#EEECE8] rounded-full cursor-pointer z-10"
+            >Make a free quote
+            <i class="fa-solid fa-arrow-right-long ml-3"></i>
+          </a>
+        </div>
+      </section>
+      <!-- renovate your home end -->
     </div>
 
     <!-- javascript file link  -->
