still working on why choose section

--- a/index.html
+++ b/index.html
@@ -686,13 +686,74 @@
             your dream Home.
           </p>
           <a
-            class="bg-[#FF6D43] py-4 px-10 inline-block text-[#EEECE8] rounded-full cursor-pointer z-10"
+            class="bg-[#FF6D43] mt-6 py-4 px-10 inline-block text-[#EEECE8] rounded-full cursor-pointer z-10"
             >Make a free quote
             <i class="fa-solid fa-arrow-right-long ml-3"></i>
           </a>
         </div>
       </section>
       <!-- renovate your home end -->
+
+      <!-- why choose section start  -->
+      <section class="bg-white min-h-[50rem] flex flex-col py-10">
+        <div class="flex flex-col justify-center items-center">
+          <h1
+            class="text-5xl font-normal tracking-normal text-center leading-[52px] text-[#291E18]"
+          >
+            Why Choose <span class="text-[#FF6D43]">Renoexpert</span>?
+          </h1>
+          <p class="text-[#291E18] opacity-[80%] w-[60rem] text-center mt-4">
+            At Renoexpert, we understand that choosing a partner for your home
+            renovation is a significant decision. Our commitment goes beyond
+            craftsmanship—we offer a unique blend of expertise, dedication, and
+            personalized service. Here's why countless homeowners in Singapore
+            choose us as their trusted renovation partner.
+          </p>
+        </div>
+        <div class="flex m-auto items-center text-center">
+          <div class="l-side">
+            <div class="flex gap-9 justify-center items-center">
+              <div
+                class="h-[9rem] w-[9rem] bg-[#c6e4ee] flex justify-center items-center"
+              >
+                <img src="./asset/img/team.png" alt="team" />
+              </div>
+              <div>
+                <h3
+                  class="text-3xl font-normal leading-9 tracking-normal text-left"
+                >
+                  Expert Team
+                </h3>
+                <span class="w-[9rem] h-[0.125rem] bg-[#FF6D43]"></span>
+                <p
+                  class="text-base font-normal leading-6 tracking-normal text-left w-[25rem]"
+                >
+                  Our team comprises seasoned professionals with a wealth of
+                  experience. From skilled craftsmen to creative designers.
+                </p>
+              </div>
+            </div>
+          </div>
+          <div
+            class="r-side bg-[#c6e4ee] w-[60rem] flex justify-center items-center"
+          >
+            <img src="./asset/img/man_image.png" alt="man image" />
+          </div>
+        </div>
+      </section>
+      <!-- why choose section end -->
+
+      <!-- blog section start  -->
+      <section></section>
+      <!-- blog section end -->
+
+      <!-- contact us section start  -->
+      <section></section>
+      <!-- contact us section end -->
+
+      <!-- footer section start  -->
+      <footer></footer>
+      <!-- footer section end -->
     </div>
 
     <!-- javascript file link  -->
