--- a/index.html
+++ b/index.html
@@ -695,7 +695,7 @@
       <!-- renovate your home end -->
 
       <!-- why choose section start  -->
-      <section class="bg-white min-h-[50rem] flex flex-col py-10">
+      <section class="bg-white min-h-[50rem] w-auto flex flex-col py-10">
         <div class="flex flex-col justify-center items-center">
           <h1
             class="text-5xl font-normal tracking-normal text-center leading-[52px] text-[#291E18]"
@@ -711,7 +711,8 @@
           </p>
         </div>
         <div class="flex m-auto items-center text-center">
-          <div class="l-side">
+          <div class="l-side flex flex-col gap-16">
+            <!-- div 1 -->
             <div class="flex gap-9 justify-center items-center">
               <div
                 class="h-[9rem] w-[9rem] bg-[#c6e4ee] flex justify-center items-center"
@@ -720,11 +721,13 @@
               </div>
               <div>
                 <h3
-                  class="text-3xl font-normal leading-9 tracking-normal text-left"
+                  class="text-3xl font-normal leading-9 tracking-normal text-left choose_head_text"
                 >
                   Expert Team
                 </h3>
-                <span class="w-[9rem] h-[0.125rem] bg-[#FF6D43]"></span>
+                <span
+                  class="w-[9rem] h-[0.125rem] bg-[#FF6D43] choose_head_border"
+                ></span>
                 <p
                   class="text-base font-normal leading-6 tracking-normal text-left w-[25rem]"
                 >
@@ -733,6 +736,60 @@
                 </p>
               </div>
             </div>
+            <!-- div 1 -->
+            <!-- div 2 -->
+            <div class="flex gap-9 justify-center items-center">
+              <div
+                class="h-[9rem] w-[9rem] bg-[#c6e4ee] flex justify-center items-center"
+              >
+                <img src="./asset/img/dollar.png" alt="team" />
+              </div>
+              <div>
+                <h3
+                  class="text-3xl font-normal leading-9 tracking-normal text-left choose_head_text"
+                >
+                  Budget-Friendly Solutions
+                </h3>
+                <span
+                  class="w-[9rem] h-[0.125rem] bg-[#FF6D43] choose_head_border"
+                ></span>
+                <p
+                  class="text-base font-normal leading-6 tracking-normal text-left w-[25rem]"
+                >
+                  we understand the importance of staying within budget without
+                  sacrificing quality. Our commitment to budget-friendly
+                  solutions ensures that your dream home remains both
+                  spectacular and financially sensible
+                </p>
+              </div>
+            </div>
+            <!-- div 2 -->
+            <!-- div 3 -->
+            <div class="flex gap-9 justify-center items-center">
+              <div
+                class="h-[9rem] w-[9rem] bg-[#c6e4ee] flex justify-center items-center"
+              >
+                <img src="./asset/img/clock_time.png" alt="team" />
+              </div>
+              <div>
+                <h3
+                  class="text-3xl font-normal leading-9 tracking-normal text-left choose_head_text"
+                >
+                  Timely Delivery
+                </h3>
+                <span
+                  class="w-[9rem] h-[0.125rem] bg-[#FF6D43] choose_head_border"
+                ></span>
+                <p
+                  class="text-base font-normal leading-6 tracking-normal text-left w-[25rem]"
+                >
+                  We value your time as much as you do. With Renoexpert, expect
+                  not just a beautifully renovated space, but also timely
+                  project delivery.
+                </p>
+              </div>
+            </div>
+            <!-- div 3 -->
           </div>
           <div
             class="r-side bg-[#c6e4ee] w-[60rem] flex justify-center items-center"
