--- a/index.html
+++ b/index.html
@@ -695,8 +695,8 @@
       <!-- renovate your home end -->
 
       <!-- why choose section start  -->
-      <section class="bg-white min-h-[50rem] w-auto flex flex-col py-10">
-        <div class="flex flex-col justify-center items-center">
+      <section class="bg-white min-h-[50rem] w-auto flex flex-col pt-28">
+        <div class="flex flex-col justify-center items-center gap-6 mb-32">
           <h1
             class="text-5xl font-normal tracking-normal text-center leading-[52px] text-[#291E18]"
           >
@@ -710,7 +710,7 @@
             choose us as their trusted renovation partner.
           </p>
         </div>
-        <div class="flex m-auto items-center text-center">
+        <div class="flex m-auto items-center text-center gap-32">
           <div class="l-side flex flex-col gap-16">
             <!-- div 1 -->
             <div class="flex gap-9 justify-center items-center">
@@ -791,21 +791,143 @@
             </div>
             <!-- div 3 -->
           </div>
-          <div
-            class="r-side bg-[#c6e4ee] w-[60rem] flex justify-center items-center"
-          >
-            <img src="./asset/img/man_image.png" alt="man image" />
+          <div class="r-side bg-[#c6e4ee] flex justify-center items-center">
+            <img
+              class="px-32 pt-24"
+              src="./asset/img/man_image.png"
+              alt="man image"
+            />
           </div>
         </div>
       </section>
       <!-- why choose section end -->
 
       <!-- blog section start  -->
-      <section></section>
+      <section class="bg-black flex gap-16 justify-center py-40">
+        <div>
+          <div class="flex gap-9 mb-[3.19rem] justify-center">
+            <span class="pt-5">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="8"
+                height="8"
+                viewBox="0 0 8 8"
+                fill="none"
+              >
+                <circle cx="4" cy="4" r="4" fill="#FF6D43" />
+              </svg>
+            </span>
+            <h1
+              class="text-[#EEECE8] text-left not-italic text-[2.7rem] font-normal leading-[52px]"
+            >
+              Explore Our <br />
+              <span class="text-[#FF6D43]">Renovation Blogs</span>
+            </h1>
+          </div>
+          <p
+            class="text-[#EEECE8] w-[36rem] text-base font-normal leading-6 tracking-normal text-left mb-[3.19rem]"
+          >
+            Dive into the world of design, innovation, and home transformation
+            with our curated blog.
+          </p>
+          <a
+            class="border-[0.01px] border-white py-4 px-10 inline-block text-[#EEECE8] rounded-full cursor-pointer z-10"
+            >SEE ALL
+            <i class="fa-solid fa-arrow-right-long ml-3"></i>
+          </a>
+        </div>
+        <div>
+          <div
+            class="flex gap-11 justify-center items-center border-b-[0.1px] border-[#BEB8AE] pb-20"
+          >
+            <img src="./asset/img/blog_img1.png" alt="blog image" />
+            <div class="flex flex-col gap-5">
+              <h3
+                class="text-3xl font-normal leading-8 tracking-normal text-left text-white"
+              >
+                Creative Ideas for Small Spaces
+              </h3>
+              <p
+                class="text-sm font-normal leading-5 tracking-normal text-left text-[#EEECE8] w-[22.6rem]"
+              >
+                Discover innovative ways to maximize space without compromising
+                on style.
+              </p>
+              <div class="flex items-center gap-4">
+                <img
+                  src="./asset/img/date_pointer_bg.png"
+                  alt="date_pointer_bg"
+                />
+                <p
+                  class="text-xs font-normal leading-4 tracking-normal text-left text-[#EEECE8]"
+                >
+                  7 January 2023
+                </p>
+              </div>
+            </div>
+          </div>
+          <!-- =================================================== -->
+          <div class="flex gap-11 justify-center items-center pt-20">
+            <img src="./asset/img/blog_img2.png" alt="blog image" />
+            <div class="flex flex-col gap-5">
+              <h3
+                class="text-3xl font-normal leading-8 tracking-normal text-left text-white"
+              >
+                The Colors Shaping Home Interiors in 2024
+              </h3>
+              <p
+                class="text-sm font-normal leading-5 tracking-normal text-left text-[#EEECE8] w-[22.6rem]"
+              >
+                Stay ahead of the curve with a glimpse into the hues and
+                palettes that are making waves in interior design this year.
+              </p>
+              <div class="flex items-center gap-4">
+                <img
+                  src="./asset/img/date_pointer_bg.png"
+                  alt="date_pointer_bg"
+                />
+                <p
+                  class="text-xs font-normal leading-4 tracking-normal text-left text-[#EEECE8]"
+                >
+                  24 December 2023
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
       <!-- blog section end -->
 
       <!-- contact us section start  -->
-      <section></section>
+      <section class="bg-white">
+        <div>
+          <div class="flex gap-9 mb-[3.19rem] justify-start items-center">
+            <img src="./asset/img/email_contact.png" alt="email_icon" />
+            <span class="pt-5">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="8"
+                height="8"
+                viewBox="0 0 8 8"
+                fill="none"
+              >
+                <circle cx="4" cy="4" r="4" fill="#FF6D43" />
+              </svg>
+            </span>
+            <h1
+              class="text-[#291E18] text-left not-italic text-[2.7rem] font-normal leading-[52px]"
+            >
+              Contact us
+            </h1>
+          </div>
+          <p
+            class="text-[#291E18] w-[36rem] text-base font-normal leading-6 tracking-normal text-left mb-[3.19rem]"
+          >
+            We will call you back within 30 minutes.
+          </p>
+        </div>
+        <div></div>
+      </section>
       <!-- contact us section end -->
 
       <!-- footer section start  -->
